Makefile: add "clean"

--- a/nitrogen6/Makefile
+++ b/nitrogen6/Makefile
@@ -1,2 +1,5 @@
 drv2605-i2c-play: drv2605-i2c-play.c
 	arm-linux-gnueabihf-gcc drv2605-i2c-play.c -o drv2605-i2c-play
+
+clean:
+	rm drv2605-i2c-play
